# sealos-fastapi-postgresql-example

./: Dockerfile  alembic.ini  pyproject.toml
.github/workflows/: build-image.yml
.sealos/: analysis.json  state.json
.sealos/template/: index.yaml
alembic/: env.py
alembic/versions/: 0001_create_items.py
app/: __init__.py  db.py  main.py  models.py
app/api/: routes.py
evidence/: package-provenance.v1.json  source-closure.v1.json
tests/: test_health.py  test_items.py  test_migrations.py
