[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sealos-fastapi-postgresql-example"
version = "1.0.0"
description = "Controlled FastAPI PostgreSQL example for Sealos practice"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "psycopg[binary]==3.3.4",
  "sqlalchemy==2.0.51",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
test = ["pytest==9.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
